--- a/src/main/resources/templates/mypage/requestDetail.html
+++ b/src/main/resources/templates/mypage/requestDetail.html
@@ -187,24 +187,28 @@
 				<div class="col-md-10 mx-auto d-flex justify-content-end gap-3" sec:authorize="hasRole('CUSTOMER')">
 					<a th:href="@{/mypage/requests/cancel/{id}(id=${requestDto.id})}"
 						th:if="${requestDto.status eq T(com.devmatch.constant.RequestType).PROGRESS}"
+						onclick="if (!confirm('취소 요청을 보내시겠습니까?')) { return false; }"
 					>
 						<button class="btn btn-secondary px-4">취소 요청</button>
 					</a>
 					<a
 						th:href="@{/mypage/requests/revert/{id}(id=${requestDto.id})}"
 						th:if="${not(requestDto.status eq T(com.devmatch.constant.RequestType).PROGRESS || requestDto.status eq T(com.devmatch.constant.RequestType).COMPLETE) && not(requestDto.accepted)}"
+						onclick="if (!confirm('요청을 취소하시겠습니까?')) { return false; }"
 					>
 						<button class="btn btn-secondary px-4">요청 취소</button>
 					</a>
 					<a 
 						th:href="@{/mypage/requests/edit/{id}(id=${requestDto.id})}"
 						th:if="${requestDto.status eq T(com.devmatch.constant.RequestType).PROGRESS}"
+						onclick="if (!confirm('수정 요청을 보내시겠습니까?')) { return false; }"
 					>
 						<button class="btn btn-primary px-4">수정 요청</button>
 					</a>
 					<a 
 						th:href="@{/mypage/requests/complete/{id}(id=${requestDto.id})}"
 						th:if="${requestDto.status eq T(com.devmatch.constant.RequestType).COMPLETE && requestDto.accepted eq false}"
+						onclick="if (!confirm('완료 요청을 승인하시겠습니까?')) { return false; }"
 					>
 						<button class="btn btn-primary px-4">완료</button>
 					</a>
@@ -213,24 +217,28 @@
 					<a
 						th:href="@{/mypage/requests/complete/{id}(id=${requestDto.id})}"
 						th:if="${requestDto.status eq T(com.devmatch.constant.RequestType).PROGRESS}"
+						onclick="if (!confirm('완료 요청을 보내시겠습니까?')) { return false; }"
 					>
 						<button class="btn btn-primary px-4">완료 요청</button>
 					</a>
 					<a
 						th:href="@{/mypage/requests/deny/{id}(id=${requestDto.id})}"
 						th:if="${requestDto.status eq T(com.devmatch.constant.RequestType).REQUEST && not(requestDto.accepted)}"
+						onclick="if (!confirm('요청을 거절하시겠습니까?')) { return false; }"
 					>
 						<button class="btn btn-secondary px-4">거절</button>
 					</a>
 					<a
 						th:href="@{/mypage/requests/accept/{id}(id=${requestDto.id})}"
 						th:if="${not(requestDto.status eq T(com.devmatch.constant.RequestType).PROGRESS || requestDto.status eq T(com.devmatch.constant.RequestType).COMPLETE) && not(requestDto.accepted)}"
+						onclick="if (!confirm('요청을 승인하시겠습니까?')) { return false; }"
 					>
 						<button class="btn btn-primary px-4">승인</button>
 					</a>
 					<a
 						th:href="@{/mypage/requests/revert/{id}(id=${requestDto.id})}"
 						th:if="${requestDto.status eq T(com.devmatch.constant.RequestType).COMPLETE && not(requestDto.accepted)}"
+						onclick="if (!confirm('요청을 취소하시겠습니까?')) { return false; }"
 					>
 						<button class="btn btn-secondary px-4">요청 취소</button>
 					</a>
